--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^2.6.11",
     "gh-pages": "^2.2.0",
+    "lodash": "^4.17.19",
     "vue": "^2.6.11",
     "vue-material-design-icons": "^3.4.0"
   },
